...
        // Le clavier prend la hauteur minimale nécessaire
        mainAxisSize: MainAxisSize.min,
        children: [
          _buildRow(['1', '2', '3'], buttonPadding, keyFontSize),
          _buildRow(['4', '5', '6'], buttonPadding, keyFontSize),
          _buildRow(['7', '8', '9'], buttonPadding, keyFontSize),
          _buildRow(['DEL', '0', 'OK'], buttonPadding, keyFontSize),
        ],
      ),
    );
  }

  Widget _buildRow(List<String> keys, EdgeInsets padding, double fontSize) {
...
